Bug 159594 - SVG: some elements are not visible
Summary: SVG: some elements are not visible
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.8.0 target:24.2.1 target:7....
Keywords: bibisected, bisected, regression
Depends on:
Blocks: SVG-Import
  Show dependency treegraph
 
Reported: 2024-02-06 11:28 UTC by Xisco Faulí
Modified: 2026-03-12 14:34 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparsion LibreOffice 24.8 master vs Firefox (60.91 KB, image/png)
2024-02-06 11:28 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2024-02-06 11:28:57 UTC
Created attachment 192429 [details]
Comparsion LibreOffice 24.8 master vs Firefox

Steps to reproduce:
1. Open attachment 110968 [details] from bug 64075

-> The text is not displayed

Reproduced in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f289fe3dca487c45417f7b40d51a4830f3369fb1
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2024-02-06 11:30:05 UTC
Regression from 

author	Xisco Fauli <xiscofauli@libreoffice.org>	2024-01-26 15:10:58 +0100
committer	Xisco Fauli <xiscofauli@libreoffice.org>	2024-01-26 19:31:03 +0100
commit e7186b49a9a0b24ddc3b1c5384b5d9facb03518c (patch)
tree cb8fcb1e001d42b75599f31430558e471e7a7c3a
parent 80480fb5ecc18a0a9b6c4cccc5cc35eba721f636 (diff)
tdf#158445: support viewBox in symbol elements
Comment 2 Commit Notification 2024-02-06 14:13:23 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/23293fc6a7c811d624d6d4589195b3d971448890

tdf#159594: reuse target for symbols' children

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-02-08 21:32:53 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/71deb4bcc4e54b807c3a885652bebd8ee3f73cc0

tdf#159601, tdf#159594: reuse target for symbols' children

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-02-12 17:14:47 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/81454c1c3a98860a82fa54fd3a417d3bcb72f8ae

tdf#159601, tdf#159594: reuse target for symbols' children

It will be available in 7.6.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-02-15 20:34:32 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6-5":

https://git.libreoffice.org/core/commit/acbf0d017b774e9779503f1aef943c6d7f88ec39

tdf#159601, tdf#159594: reuse target for symbols' children

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.