tdf#159594: reuse target for symbols' children

Regression from e7186b49a9a0b24ddc3b1c5384b5d9facb03518c
"tdf#158445: support viewBox in symbol elements"

Change-Id: Ie2198c47149def17fa3cb612046b61bf32e873bf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163046
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>